test/error/iface/err7.rzy
// query is not connected

Sub = Elementary
  funcA : query():Boolean;
end

Err7 = Composition
  a : Sub;

end

